k8s_mainifest_file/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-backend 
  namespace: three-tier
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend 
  template:
    metadata:
      labels:
        app: backend 
    spec:
      containers:
        - name: blog-backend-container                   
          image: chetansingh673/blog-backend:build-5
          ports:
            - containerPort: 5000
