k8s_mainifest_file/db-deployment.yaml
# ---- PostgreSQL Deployment ----
apiVersion: apps/v1
kind: StatefulSet  
metadata:
  name: blog-db
  namespace: three-tier 
  labels:
    app: database  
spec:
  replicas: 1
  selector:
    matchLabels: 
        app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: blog-db-contianer
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes: 
        - name: db-storage
          persistentVolumeClaim:
             claimName: blog-ebs-pvc  # This is the pvc name
