k8s_mainifest_file/frontend-service.yaml
# ---- Frontend Service (ClusterIP — internal only) ----

apiVersion: v1
kind: Service
metadata:
  name: blog-frontend-service
  namespace: three-tier
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector: 
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
