k8s_mainifest_file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: blog-lb
  namespace: three-tier 
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: blog-alb
    # Target type and Listener Port

    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:607416643673:certificate/bef602df-583d-4388-b2ac-bf3e69017c73   # Replace with your ACM certificate ARN
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: alb 
  rules:
     - host: blog.cloudmella.store
       http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: blog-frontend-service  # frontend service name we need to give here
              port:
                number: 8080
